fixed the modals scrollbar issue

--- a/src/assets/styles/forms.scss
+++ b/src/assets/styles/forms.scss
@@ -2,6 +2,7 @@
 .form-control {
     width: 100%;
     resize: none;
+    overflow: hidden;
     
     &:focus, &:active, &:focus-visible {
         border: none;
